--- a/RealEstateApp/Gemfile
+++ b/RealEstateApp/Gemfile
@@ -17,6 +17,7 @@ gem 'sass-rails', '~> 5.0'
 # Use Uglifier as compressor for JavaScript assets
 gem 'uglifier', '>= 1.3.0'
 gem 'devise', '~> 4.2'
+gem 'paperclip', '~> 5.1'
 # See https://github.com/rails/execjs#readme for more supported runtimes
 # gem 'therubyracer', platforms: :ruby
 gem 'bootstrap-sass', '~> 3.3', '>= 3.3.7'
